--- a/carrito.html
+++ b/carrito.html
@@ -11,13 +11,25 @@
 <header id="cabecera">
     <div>
         <h1>Personalizatucompu.com</h1>
-        <button class="botones" type="submit"><a id="botonHome" href="./home.html" >Home</a></button>
+        <button class="botones" type="submit"><a id="botonHome" href="./home.html" ><img src="/imagenes/home.png" id="botonHome" width="20" height="20"></a></button>
+        <button class="botones" type="submit"><a width="20" height="20" href="./pago.html">COMPRAR</a></button>
     </div>
 </header>
 
 <body>
     <div id="principal"></div>
+    <div id="bodyCarrito">
+
+    </div>
 
 </body>
+<fotter>
+    <div id="pie">
+        <h3>Gracias por preferirnos. Disfruta tu compra y siguenos en redes</h3>
+        <h5>instagram: <a href="white" target="_blank">https://www.instagram.com/personalizatucompu.com</a></h5>
+        <h5>facebook: <a href="white" target="_blank">https://www.facebook.com/personalizatucompu.com</a></h5>
+        <h5>whatsapp: <a href="white" target="_blank">+57 31978741071</a></h5>
+    </div>
+</fotter>
 
 </html>
